fixed the alignment of jobcard additional info

--- a/frontend/styles/components/Jobs.module.css
+++ b/frontend/styles/components/Jobs.module.css
@@ -284,7 +284,6 @@
     margin: 0;
     color: rgb(54, 54, 54);
     align-self: top;
-    margin-left: auto;
     flex-wrap: wrap;
     
 }
